# Kursovaya_4_Shakhverdova_A_V

./: README.md  main.py  pyproject.toml
src/: Classes.py  JSON_saver.py  Vacancy.py  config.py
