[tool.poetry]
name = "kursovaya-4-shakhverdova-a-v"
version = "0.1.0"
description = ""
authors = ["JaneFoxe <Kukusiki2204@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
